--- a/style.css
+++ b/style.css
@@ -99,8 +99,19 @@ body{
 	font-weight: 400;
 	letter-spacing: 1px;
 	margin-bottom: 30px;
+	cursor: pointer;
+	outline: 0;
+	border-radius: 3px;
+	}
+.btn:hover{
+	color: #1A1A1A;
+	background:#fbc531;
+
 	}
 @media only screen and (max-width: 500px){
+	body{
+		height: 100%;
+	}
 	.container{
 		width: 100%;
 		flex-direction: column;
